# chat_model_service

./: .dockerignore  .env.example  .gitattributes  .gitignore  PROJECT_CONTEXT.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml
apps/api/: Dockerfile
apps/fake-idp/: Dockerfile
apps/web/: Dockerfile  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/worker/: Dockerfile
docs/enterprise-qa-system/: 00-project-charter-and-scope.md  01-requirements-and-use-cases.md  02-architecture-and-decisions.md  03-data-model.md  04-api-contracts.md  05-stage-plan-and-tutorials.md  06-rag-model-and-prompt-design.md  07-security-and-governance.md  08-testing-and-evaluation.md  09-deployment-and-cicd.md  10-observability-and-operations.md  11-github-reference-projects.md  12-delivery-checklists.md  README.md  openapi.yaml  schema.sql
infra/compose/: compose.yaml  otel-collector.yaml
infra/observability/: alerts.yaml  prometheus.yaml
scripts/: check.ps1  dev.ps1  drill_s6_recovery.py  evaluate_s4.py  fault_s6.py  load_s6.py  setup.ps1  smoke_s1.py  smoke_s2.py  smoke_s3.py  smoke_s4.py  smoke_s5.py  smoke_s6.py  smoke_s7.py  validate_contracts.py
tests/: conftest.py
tests/evaluation/: s0-golden-dataset.jsonl  s4-mini-golden.json
tests/integration/: test_api.py  test_chat.py  test_contract.py  test_fake_oidc.py  test_governance.py  test_ingestion.py  test_quality_reliability.py  test_rag.py  test_release_operations.py  test_repository_concurrency.py
tests/unit/: test_config_and_security.py  (+5 more)
(+208 files in other folders)
