[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-qa-system"
version = "0.1.0"
description = "Enterprise multi-tenant QA system - S7 release and operations"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic==1.18.5",
  "boto3==1.43.48",
  "defusedxml==0.7.1",
  "email-validator>=2.1,<3",
  "fastapi==0.139.0",
  "httpx==0.28.1",
  "opentelemetry-api==1.43.0",
  "opentelemetry-sdk==1.43.0",
  "opentelemetry-exporter-otlp-proto-grpc==1.43.0",
  "psycopg[binary]>=3.2,<4",
  "pydantic==2.13.4",
  "pgvector==0.5.0",
  "pypdf==6.14.2",
  "PyJWT[crypto]==2.13.0",
  "SQLAlchemy==2.0.51",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "httpx2==2.7.0",
  "pip-audit>=2.7,<3",
  "pytest==9.1.1",
  "pytest-cov>=7,<8",
  "PyYAML>=6.0,<7",
  "requests==2.34.2",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]

[tool.setuptools]
package-dir = {"" = "apps/api/src"}

[tool.setuptools.packages.find]
where = ["apps/api/src"]
include = ["qa_api*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
